# specs

.kiro/hooks/: test.kiro.hook
python-url-shortener/: .config.kiro  _check_versions.py  design.md  pyproject.toml  requirements.md  tasks.md  update_design.ps1  urls.db
python-url-shortener/app/: exceptions.py  models.py  test.py
python-url-shortener/app/api/routers/: __init__.py
python-url-shortener/app/schemas/: __init__.py  url.py
python-url-shortener/app/services/: code_generator.py  url_service.py
python-url-shortener/app/store/: __init__.py  url_store.py
python-url-shortener/tests/unit/: test_code_generator.py  test_code_generator_properties.py  test_schemas.py  test_store.py
python-url-shortener/tests/unit/test_api/: __init__.py
