[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "python-url-shortener"
version = "0.1.0"
description = "A FastAPI-based URL shortener service"
requires-python = ">=3.11"

dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "sqlalchemy[asyncio]==2.0.36",
    "aiosqlite==0.20.0",
    "pydantic==2.10.2",
]

[project.optional-dependencies]
dev = [
    "hypothesis==6.122.3",
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "httpx==0.28.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
